--------------------
  5.0 (in progress)
--------------------

See https://bitbucket.org/premake/premake-dev/wiki/What's_New_in_5.0
for the complete list of changes from the Premake 4.x series.

Since 5.0-alpha1:

* filter() now accepts field value aliases in the conditions
* Fixed _ACTION and _OPTIONS filter prefixes
* Main application logic can now be extended by modules
* Action arguments (_ARGS) are now keyed by both index and value
* Configuration baking and validation now skipped for execute only actions
* os.findlib() now accepts paths to search as argument
* Visual Studio .user files are now only generated if not empty
* Xcode4 exporter is now available
* Modules may now be loaded on demand where feasible
* New API: gccprefix()
* New API: undefines()
* New API: disablewarnings(), enablewarnings(), fatalwarnings()
* New API: debugconnectcommands(), debugstartupcommands()
* New API: debugremotehost(), debugport(), debugremoteprotocol()
* New API: debugsearchpaths()
* os.outputof() now returns command exit code as second value
* Added AVX2 to vectorextensions()
* Embedded scripts now compressed with LuaSrcDiet (Oliver Schneider)
* Checks to prevent self-linking (Mark Chandler)
* os.rmdir() can now removes dotted subdirectories (Alexey Orlov)