@@ -27,3 +27,4 @@ Since 5.0-alpha1:
 * Embedded scripts now compressed with LuaSrcDiet (Oliver Schneider)
 * Checks to prevent self-linking (Mark Chandler)
 * os.rmdir() can now removes dotted subdirectories (Alexey Orlov)
+* Added path.replaceextension() (M Skibbe)
